src/test/deca/codegen/invalid/created/float_trop_petit.deca
// Description :
//		Programme pour tester le debordement de flottant
//
// Resultats :
//		Erreur de compilation
//		floattant trop petit


{
float x = 1000.0;
float f = (1.0/(x*x*x*x*x*x*x*x))*(1.0/(x*x*x*x*x*x*x*x));
print(f);
}